[package]

name = "todo-backend-rust-iron"
version = "0.0.1"
authors = ["John Hume <duelin.markers@gmail.com>"]

[dependencies.iron]
git = "https://github.com/iron/iron.git"

[dependencies.logger]
git = "https://github.com/duelinmarkers/logger.git"
rev = "bug/work-with-new-iron-api"

[dependencies.router]
git = "https://github.com/iron/router.git"

[dependencies.persistent]
git = "https://github.com/iron/persistent.git"

[dependencies.uuid]
git = "https://github.com/rust-lang/uuid.git"

# [dependencies.bodyparser]
# git = "https://github.com/iron/body-parser.git"
